syntax = "proto3";
package AwemeGDAdStruct;
message ProtoAdapter_AwemeGDAdStruct {
	int64 ad_id = 1;
	int32 ad_price = 5;
	//com.ss.android.ugc.aweme.base.model.UrlModel#ADAPTER click_track_url_list = 13;
	int64 cpt_seq = 2;
	int64 creative_id = 6;
	int32 effective_play_time = 17;
	//com.ss.android.ugc.aweme.base.model.UrlModel#ADAPTER effective_play_track_url_list = 18;
	int64 group_id = 19;
	bool is_preview = 14;
	string open_url = 9;
	//com.ss.android.ugc.aweme.base.model.UrlModel#ADAPTER play_track_url_list = 15;
	//com.ss.android.ugc.aweme.base.model.UrlModel#ADAPTER playover_track_url_list = 16;
	string req_id = 3;
	int64 rit = 4;
	string source = 8;
	string title = 7;
	//com.ss.android.ugc.aweme.base.model.UrlModel#ADAPTER track_url_list = 12;
	int32 video_transpose = 20;
	string web_title = 11;
	string web_url = 10;
}