message ProtobufLogPbStruct{
    string impr_id = 2;
}